# mcp-types

./: Cargo.toml  build.rs
src/: lib.rs
tests/: schema_test.rs
