[package]
name = "mcp-types"
version = "0.1.0"
edition = "2021"
description = "Generated bindings from the Model Context Protocol (MCP) JSON Schema(s)"
authors = ["Collin Brittain <collin@iqlusion.io>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/iqlusioninc/mcp-types"
keywords = ["mcp", "model", "context", "protocol"]
readme = "README.md"

[features]
default = ["2024_11_05"]
2024_11_05 = []

[dependencies]
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

[dev-dependencies]
jsonschema = "0.29.0"

[build-dependencies]
prettyplease = "0.2.29"
schemars = "0.8"
serde_json = { version = "1.0" }
syn = "2.0.96"
typify = "0.3.0"
